feat: add endpoint to detail a vacancy
